optimize movie forms

--- a/src/main/resources/webserver/template/movie/user/moviebox/movieboxform.html
+++ b/src/main/resources/webserver/template/movie/user/moviebox/movieboxform.html
@@ -60,7 +60,7 @@
             <div class="equal width fields">
                 <div class="field required">
                     <label>Produktionsjahr</label>
-                    <select name="year" class="ui dropdown search" required>
+                    <select name="year" class="ui dropdown" required>
                         <option value="">Produktionsjahr</option>
                         {% for element in yearList %}
                         <option value="{{ element }}">{{ element }}</option>
