--- a/src/main/resources/webserver/template/movie/user/movie/movieform.html
+++ b/src/main/resources/webserver/template/movie/user/movie/movieform.html
@@ -92,7 +92,7 @@
             <div class="equal width fields">
                 <div class="field required">
                     <label>Produktionsjahr</label>
-                    <select name="year" class="ui dropdown search" required>
+                    <select name="year" class="ui dropdown" required>
                         <option value="">Produktionsjahr</option>
                         {% for element in yearList %}
                         <option value="{{ element }}">{{ element }}</option>
@@ -131,7 +131,7 @@
                 </div>
                 <div class="field required">
                     <label>Genre</label>
-                    <select name="genre" class="ui dropdown search" required>
+                    <select name="genre" class="ui dropdown" required>
                         <option value="">Genre</option>
                         {% for element in genreList %}
                         <option value="{{ element.getId().get() }}">{{ element.getName() | escape }}</option>
