--- a/src/main/resources/webserver/template/movie/user/moviebox/boxmovieform.html
+++ b/src/main/resources/webserver/template/movie/user/moviebox/boxmovieform.html
@@ -91,7 +91,7 @@
             <div class="equal width fields">
                 <div class="field required">
                     <label>Produktionsjahr</label>
-                    <select name="year" class="ui dropdown search" required>
+                    <select name="year" class="ui dropdown" required>
                         <option value="">Produktionsjahr</option>
                         {% for element in yearList %}
                         <option value="{{ element }}">{{ element }}</option>
@@ -126,7 +126,7 @@
             <div class="equal width fields">
                 <div class="field required">
                     <label>Genre</label>
-                    <select name="genre" class="ui dropdown search" required>
+                    <select name="genre" class="ui dropdown" required>
                         <option value="">Genre</option>
                         {% for element in genreList %}
                         <option value="{{ element.getId().get() }}">{{ element.getName() | escape }}</option>
