--- a/src/main/resources/webserver/template/automation/admin/timer/timerform.html
+++ b/src/main/resources/webserver/template/automation/admin/timer/timerform.html
@@ -140,7 +140,7 @@
             <div class="ui segment attached bottom">
                 <div class="ui grid stackable">
                     <div class="ten wide column">
-                        <div id="doubleSwitchable" class="ui dropdown selection search fluid">
+                        <div id="doubleSwitchable" class="ui dropdown selection fluid">
                             <input name="doubleSwitchable" value="" type="hidden">
                             <i class="dropdown icon"></i>
                             <div class="default text">schaltbares Element (an/aus)</div>
@@ -167,7 +167,7 @@
                         <button class="ui button icon secondary basic" type="button" id="addDoubleSwitchable"><i class="add icon"></i></button>
                     </div>
                     <div class="fifteen wide column">
-                        <div id="singleSwitchable" class="ui dropdown selection search fluid">
+                        <div id="singleSwitchable" class="ui dropdown selection fluid">
                             <input name="singleSwitchable" value="" type="hidden">
                             <i class="dropdown icon"></i>
                             <div class="default text">schaltbares Element (einfach)</div>
