--- a/src/main/resources/webserver/template/automation/admin/room/roombuttonelementform.html
+++ b/src/main/resources/webserver/template/automation/admin/room/roombuttonelementform.html
@@ -136,7 +136,7 @@
             <div class="ui segment attached bottom">
                 <div class="ui grid stackable">
                     <div class="ten wide column">
-                        <div id="doubleSwitchable" class="ui dropdown selection search fluid">
+                        <div id="doubleSwitchable" class="ui dropdown selection fluid">
                             <input name="doubleSwitchable" value="" type="hidden">
                             <i class="dropdown icon"></i>
                             <div class="default text">schaltbares Element (an/aus)</div>
@@ -163,7 +163,7 @@
                         <button class="ui button icon secondary basic" type="button" id="addDoubleSwitchable"><i class="add icon"></i></button>
                     </div>
                     <div class="fifteen wide column">
-                        <div id="singleSwitchable" class="ui dropdown selection search fluid">
+                        <div id="singleSwitchable" class="ui dropdown selection fluid">
                             <input name="singleSwitchable" value="" type="hidden">
                             <i class="dropdown icon"></i>
                             <div class="default text">schaltbares Element (einfach)</div>
@@ -278,7 +278,7 @@
                         </div>
                         <div class="field required">
                             <label>Icon</label>
-                            <div class="ui selection dropdown search" id="safetyRequestIcon">
+                            <div class="ui search selection dropdown" id="safetyRequestIcon">
                                 <input type="hidden" name="safetyRequestIcon">
                                 <i class="dropdown icon"></i>
                                 <div class="default text">Icon</div>
