--- a/src/main/resources/webserver/template/automation/user/elements/sensor.html
+++ b/src/main/resources/webserver/template/automation/user/elements/sensor.html
@@ -1,22 +1,28 @@
-<div class="sixteen wide mobile eight wide tablet four wide computer four wide large screen column">
-    <div class="ui items">
+<div class="eight wide column">
+    <div class="ui unstackable items">
         <div class="item">
             <div class="ui tiny image middle aligned">
                 <img src="/static/img/iconset/{{ element.getIconFile() | escape }}">
             </div>
-            <div class="content">
+            <div class="content middle aligned ">
                 <div class="header">
                     {{ element.getDisplayText() | escape }}
                 </div>
                 <div class="description">
-                    {{ sensorEditor.getById(element.getFirstSensorValueId().get()).get() | formatsensorvalue | escape }}
+                    <span id="a{{ element.getFirstSensorValueId().get() }}">
+                        {{ sensorEditor.getById(element.getFirstSensorValueId().get()).get() | formatsensorvalue | escape }}
+                    </span>
                     {% if element.getSecondSensorValueId().isPresent() %}
                         <br>
+                        <span id="a{{ element.getSecondSensorValueId().get() }}">
                         {{ sensorEditor.getById(element.getSecondSensorValueId().get()).get() | formatsensorvalue | escape }}
+                        </span>
                     {% endif %}
                     {% if element.getThirdSensorValueId().isPresent() %}
                         <br>
+                        <span id="a{{ element.getThirdSensorValueId().get() }}">
                         {{ sensorEditor.getById(element.getThirdSensorValueId().get()).get() | formatsensorvalue | escape }}
+                        </span>
                     {% endif %}
                 </div>
             </div>
