--- a/src/main/resources/webserver/template/automation/user/elements/virtualsensor.html
+++ b/src/main/resources/webserver/template/automation/user/elements/virtualsensor.html
@@ -1,35 +1,35 @@
-<div class="sixteen wide mobile eight wide tablet four wide computer four wide large screen column">
-    <div class="ui items">
+<div class="eight wide column">
+    <div class="ui unstackable items">
         <div class="item">
             <div class="ui tiny image middle aligned">
                 <img src="/static/img/iconset/{{ element.getIconFile() | escape }}">
             </div>
-            <div class="content">
+            <div class="content middle aligned ">
                 <div class="header">
                     {{ element.getDisplayText() | escape }}
                 </div>
                 <div class="description">
                     {% set virtualSensor = sensorEditor.getById(element.getVirtualSensorId().get()).get() %}
                     {% if virtualSensor.getType() == 'VIRTUALSENSORVALUE_ACTUAL_POWER' %}
-                        <span style="font-weight: bold;">avg:</span> {{ virtualSensor.getAverageAsSensorValue() | formatsensorvalue | escape }}
+                    <span style="font-weight: bold;">avg:</span> <span id="a{{ element.getVirtualSensorId().get() }}_avg">{{ virtualSensor.getAverageAsSensorValue() | formatsensorvalue | escape }}</span>
                         <br>
-                        <span style="font-weight: bold;">sum:</span> {{ virtualSensor.getSumAsSensorValue() | formatsensorvalue | escape }}
+                    <span style="font-weight: bold;">sum:</span> <span id="a{{ element.getVirtualSensorId().get() }}_sum">{{ virtualSensor.getSumAsSensorValue() | formatsensorvalue | escape }}</span>
                     {% elseif virtualSensor.getType() == 'VIRTUALSENSORVALUE_ENERGY' %}
-                        <span style="font-weight: bold;">avg:</span> {{ virtualSensor.getAverageAsSensorValue() | formatsensorvalue | escape }}
+                    <span style="font-weight: bold;">avg:</span> <span id="a{{ element.getVirtualSensorId().get() }}_avg">{{ virtualSensor.getAverageAsSensorValue() | formatsensorvalue | escape }}</span>
                         <br>
-                        <span style="font-weight: bold;">sum:</span> {{ virtualSensor.getSumAsSensorValue() | formatsensorvalue | escape }}
+                    <span style="font-weight: bold;">sum:</span> <span id="a{{ element.getVirtualSensorId().get() }}_sum">{{ virtualSensor.getSumAsSensorValue() | formatsensorvalue | escape }}</span>
                     {% elseif virtualSensor.getType() == 'VIRTUALSENSORVALUE_GAS_AMOUNT' %}
-                        <span style="font-weight: bold;">sum:</span> {{ virtualSensor.getSumAsSensorValue() | formatsensorvalue | escape }}
+                    <span style="font-weight: bold;">sum:</span> <span id="a{{ element.getVirtualSensorId().get() }}_sum">{{ virtualSensor.getSumAsSensorValue() | formatsensorvalue | escape }}</span>
                     {% elseif virtualSensor.getType() == 'VIRTUALSENSORVALUE_LIGHT_INTENSITY' %}
-                        <span style="font-weight: bold;">avg:</span> {{ virtualSensor.getAverageAsSensorValue() | formatsensorvalue | escape }}
+                    <span style="font-weight: bold;">avg:</span> <span id="a{{ element.getVirtualSensorId().get() }}_avg">{{ virtualSensor.getAverageAsSensorValue() | formatsensorvalue | escape }}</span>
                     {% elseif virtualSensor.getType() == 'VIRTUALSENSORVALUE_WATER_AMOUNT' %}
-                        <span style="font-weight: bold;">sum:</span> {{ virtualSensor.getSumAsSensorValue() | formatsensorvalue | escape }}
+                    <span style="font-weight: bold;">sum:</span> <span id="a{{ element.getVirtualSensorId().get() }}_sum">{{ virtualSensor.getSumAsSensorValue() | formatsensorvalue | escape }}</span>
                     {% elseif virtualSensor.getType() == 'VIRTUALSENSORVALUE_TEMPERATURE' %}
-                        <span style="font-weight: bold;">min:</span> {{ virtualSensor.getMinAsSensorValue() | formatsensorvalue | escape }}
+                    <span style="font-weight: bold;">min:</span> <span id="a{{ element.getVirtualSensorId().get() }}_min">{{ virtualSensor.getMinAsSensorValue() | formatsensorvalue | escape }}</span>
                         <br>
-                        <span style="font-weight: bold;">avg:</span> {{ virtualSensor.getAverageAsSensorValue() | formatsensorvalue | escape }}
+                    <span style="font-weight: bold;">avg:</span> <span id="a{{ element.getVirtualSensorId().get() }}_avg">{{ virtualSensor.getAverageAsSensorValue() | formatsensorvalue | escape }}</span>
                         <br>
-                        <span style="font-weight: bold;">max:</span> {{ virtualSensor.getMaxAsSensorValue() | formatsensorvalue | escape }}
+                    <span style="font-weight: bold;">max:</span> <span id="a{{ element.getVirtualSensorId().get() }}_max">{{ virtualSensor.getMaxAsSensorValue() | formatsensorvalue | escape }}</span>
                     {% endif %}
                 </div>
             </div>
