--- a/src/main/resources/webserver/template/automation/user/headline.html
+++ b/src/main/resources/webserver/template/automation/user/headline.html
@@ -1,9 +1,26 @@
+<script type="text/javascript">
+    $(function() {
+        $('.ui.dropdown').dropdown();
+    });
+</script>
 <header>
     <div class="ui fixed inverted menu large">
         <a onclick="$('.ui.labeled.icon.sidebar').sidebar('toggle')" class="header item">
             <img src="/static/img/icon/automation.png" width="32" height="32" class="logo">
             Automatisierung
         </a>
+        <div class="ui item dropdown">
+            <img src="/static/img/iconset/{{ activeRoom.getIconFile() | escape }}" width="32" height="32" class="logo">
+            {{ activeRoom.getDisplayText() | escape }}
+            <div class="ui icon menu">
+                {% for room in rooms %}
+                <a class="item {% if room.getId().equals(activeRoom.getId()) %}active{% endif %}" href="/automation/index?id={{ room.getId().get() | escape }}">
+                    <img class="icon image" src="/static/img/iconset/{{ room.getIconFile() | escape }}">
+                    <span style="display: inline-block; margin-top: 8px;">{{ room.getDisplayText() | escape }}</span>
+                </a>
+                {% endfor %}
+            </div>
+        </div>
         <div class="right menu">
             <a href="/automation/admin/index" class="item"><i class="setting icon large"></i></a>
         </div>
