--- a/src/main/resources/webserver/template/header.html
+++ b/src/main/resources/webserver/template/header.html
@@ -3,3 +3,4 @@
         <script src="/static/jquery/jquery-3.3.1.js"></script>
         <script src="/static/semantic/semantic.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+        <meta name="theme-color" content="rgba(34, 36, 38, 0.1)" />
