--- a/src/main/resources/webserver/template/movie/admin/headline.html
+++ b/src/main/resources/webserver/template/movie/admin/headline.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="ui fixed inverted menu large">
+    <div class="ui fixed inverted menu large stackable">
         <a onclick="$('.ui.labeled.icon.sidebar').sidebar('toggle')"  class="header item">
             <img src="/static/img/icon/movie.png" width="32" height="32" class="logo">
             Filme Admin
