--- a/src/main/resources/webserver/template/movie/user/headline.html
+++ b/src/main/resources/webserver/template/movie/user/headline.html
@@ -1,10 +1,11 @@
 <script type="text/javascript">
     function search() {
 
-        var value = $('.ui.search input').val();
+        var value = $('#searchInput').val() ? $('#searchInput').val() : $('#mobileSearchInput').val();
         window.location = '/movie/search?query=' + value;
     }
 
+    var mobileView = {% if mobileView %}true{% else %}false{% endif %};
     $(function() {
 
         $('.ui.dropdown').dropdown();
@@ -13,15 +14,42 @@
             search();
         });
 
+        $('#mobilSearchButton').click(function () {
+            search();
+        });
+
         $('.ui.search input').keydown(function (e) {
             if(e.which == 13) {
                 search();
                  }
         });
+
+        //Bildschirmorientierung ermitteln
+        var height = $(window).height();
+        var width = $(window).width();
+        if(width < height) {
+
+            //Smallscreen
+            $('#widescreen').hide();
+            $('#smallscreen').show();
+            if(!mobileView) {
+
+                $.get({url: "/mobileview?mobile"});
+            }
+        } else {
+
+            //Widescreen
+            $('#widescreen').show();
+            $('#smallscreen').hide();
+            if(mobileView) {
+
+                $.get({url: "/mobileview"});
+            }
+        }
     });
 </script>
 <header>
-    <div class="ui fixed inverted menu large">
+    <div class="ui fixed inverted menu large" id="widescreen" {% if mobileView %}style="display: none;"{% endif %}>
         <a onclick="$('.ui.labeled.icon.sidebar').sidebar('toggle')" class="header item">
             <img src="/static/img/icon/movie.png" width="32" height="32" class="logo">
             Filme
@@ -35,10 +63,10 @@
         <a class="header item {% if module == 'movieseries' %}active{% endif %}" href="/movie/movieseries">
             Film Reihen
         </a>
-        <div class="right menu attached ">
+        <div class="right menu">
             <div class="item">
                 <div class="ui icon input search">
-                    <input placeholder="Suchen..." type="text">
+                    <input placeholder="Suchen..." type="text" id="searchInput">
                     <i class="search link icon"></i>
                 </div>
             </div>
@@ -176,6 +204,193 @@
             </div>
             {% endif %}
             <a href="/movie/admin/index" class="item"><i class="setting icon large"></i></a>
+        </div>
+    </div>
+    <div class="ui fixed inverted menu large" id="smallscreen" {% if not mobileView %}style="display: none;"{% endif %}>
+        <a onclick="$('.ui.labeled.icon.sidebar').sidebar('toggle')" class="header item">
+            <img src="/static/img/icon/movie.png" width="32" height="32" class="logo">
+            Filme
+        </a>
+        <div class="right menu">
+            <div class="ui dropdown item">
+                <i class="bars icon"></i>
+                <div class="menu">
+                    <a class="header item {% if module == 'movie' %}active{% endif %}" href="/movie/movie">
+                        Filme
+                    </a>
+                    <a class="header item {% if module == 'moviebox' %}active{% endif %}" href="/movie/moviebox">
+                        Film Boxen
+                    </a>
+                    <a class="header item {% if module == 'movieseries' %}active{% endif %}" href="/movie/movieseries">
+                        Film Reihen
+                    </a>
+                    <div class="item" onclick="$('#searchModal').modal('show');">
+                        <i class="search icon large"></i>
+                        suchen
+                    </div>
+                    {% if module == 'movie' or module == 'moviebox' or module == 'movieseries' %}
+                    <div class="ui divider"></div>
+                    <div class="ui icon item dropdown">
+                        <i class="pencil alternate icon large"></i>
+                        bearbeiten
+                        <div class="menu">
+                            {% if module == 'movie' %}
+                            <a class="item" href="/movie/movieform">
+                                <i class="icon plus"></i>
+                                hinzuf&uuml;gen
+                            </a>
+                            {% if id %}
+                            <div class="ui divider"></div>
+                            <a class="item" href="/movie/movieform?id={{ id | escape }}">
+                                <i class="icon pencil alternate"></i>
+                                bearbeiten
+                            </a>
+                            <a class="item" onclick="$('#movieDeleteSafetyRequest').modal('show')">
+                                <i class="icon remove"></i>
+                                l&ouml;schen
+                            </a>
+                            <div class="ui basic modal" id="movieDeleteSafetyRequest">
+                                <div class="ui icon header">
+                                    <i class="delete icon"></i>
+                                    Film l&ouml;schen
+                                </div>
+                                <div class="content">
+                                    <p>Bist du sicher das du den Film l&ouml;schen m&ouml;chtest?</p>
+                                </div>
+                                <div class="actions">
+                                    <div class="ui red basic cancel inverted button">
+                                        <i class="remove icon"></i>
+                                        Nein
+                                    </div>
+                                    <div class="ui green ok inverted button" onclick="window.location = '/movie/moviedelete?id={{ id }}'">
+                                        <i class="checkmark icon"></i>
+                                        Ja
+                                    </div>
+                                </div>
+                            </div>
+                            {% endif %}
+                            {% endif %}
+                            {% if module == 'moviebox'%}
+                            <a class="item" href="/movie/movieboxform">
+                                <i class="icon plus"></i>
+                                hinzuf&uuml;gen
+                            </a>
+                            {% if id %}
+                            <div class="ui divider"></div>
+                            <a class="item" href="/movie/boxmovieform?boxid={{ id | escape }}">
+                                <i class="icon plus"></i>
+                                Film hinzuf&uuml;gen
+                            </a>
+                            <a class="item" href="/movie/movieboxview?id={{ id | escape }}&edit=1">
+                                <i class="icon pencil alternate"></i>
+                                Filme bearbeiten
+                            </a>
+                            <div class="ui divider"></div>
+                            <a class="item" href="/movie/movieboxform?id={{ id | escape }}">
+                                <i class="icon pencil alternate"></i>
+                                bearbeiten
+                            </a>
+                            <a class="item" onclick="$('#movieBoxDeleteSafetyRequest').modal('show')">
+                                <i class="icon remove"></i>
+                                l&ouml;schen
+                            </a>
+                            <div class="ui basic modal" id="movieBoxDeleteSafetyRequest">
+                                <div class="ui icon header">
+                                    <i class="delete icon"></i>
+                                    Film Box l&ouml;schen
+                                </div>
+                                <div class="content">
+                                    <p>Bist du sicher das du die Film Box l&ouml;schen m&ouml;chtest?</p>
+                                </div>
+                                <div class="actions">
+                                    <div class="ui red basic cancel inverted button">
+                                        <i class="remove icon"></i>
+                                        Nein
+                                    </div>
+                                    <div class="ui green ok inverted button" onclick="window.location = '/movie/movieboxdelete?id={{ id }}'">
+                                        <i class="checkmark icon"></i>
+                                        Ja
+                                    </div>
+                                </div>
+                            </div>
+                            {% endif %}
+                            {% endif %}
+                            {% if module == 'movieseries' %}
+                            <a class="item" href="/movie/movieseriesform">
+                                <i class="icon plus"></i>
+                                hinzuf&uuml;gen
+                            </a>
+                            {% if id %}
+                            <div class="ui divider"></div>
+                            <a class="item" href="/movie/seriesmovieform?seriesid={{ id | escape }}">
+                                <i class="icon plus"></i>
+                                Film hinzuf&uuml;gen
+                            </a>
+                            <a class="item" href="/movie/movieseriesview?id={{ id | escape }}&edit=1">
+                                <i class="icon pencil alternate"></i>
+                                Filme bearbeiten
+                            </a>
+                            <div class="ui divider"></div>
+                            <a class="item" href="/movie/movieseriesform?id={{ id | escape }}">
+                                <i class="icon pencil alternate"></i>
+                                bearbeiten
+                            </a>
+                            <a class="item" onclick="$('#movieSeriesDeleteSafetyRequest').modal('show')">
+                                <i class="icon remove"></i>
+                                l&ouml;schen
+                            </a>
+                            <div class="ui basic modal" id="movieSeriesDeleteSafetyRequest">
+                                <div class="ui icon header">
+                                    <i class="delete icon"></i>
+                                    Film Reihe l&ouml;schen
+                                </div>
+                                <div class="content">
+                                    <p>Bist du sicher das du die Film Reihe l&ouml;schen m&ouml;chtest?</p>
+                                </div>
+                                <div class="actions">
+                                    <div class="ui red basic cancel inverted button">
+                                        <i class="remove icon"></i>
+                                        Nein
+                                    </div>
+                                    <div class="ui green ok inverted button" onclick="window.location = '/movie/movieseriesdelete?id={{ id }}'">
+                                        <i class="checkmark icon"></i>
+                                        Ja
+                                    </div>
+                                </div>
+                            </div>
+                            {% endif %}
+                            {% endif %}
+                        </div>
+                    </div>
+                    {% endif %}
+                    <div class="ui divider"></div>
+                    <a href="/movie/admin/index" class="item">
+                        <i class="setting icon large"></i>
+                        Einstellungen
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="ui modal" id="searchModal">
+        <i class="close icon"></i>
+        <div class="header">
+            Suche
+        </div>
+        <div class="image content">
+            <div class="ui icon input search fluid">
+                <input placeholder="Suchen..." type="text" id="mobileSearchInput">
+                <i class="search link icon"></i>
+            </div>
+        </div>
+        <div class="actions">
+            <div class="ui black deny button">
+                abbrechen
+            </div>
+            <div class="ui positive right labeled icon button" id="mobilSearchButton">
+                suchen
+                <i class="search icon"></i>
+            </div>
         </div>
     </div>
 </header>
